bugfix: background cloud 1px gap modify css

--- a/css/background.css
+++ b/css/background.css
@@ -33,6 +33,8 @@
     background-position: 0 0;
     transform: scaleX(-1);
     animation: ティアドロップス 80s infinite linear;
+    text-align: left;
+    left: 0;
 }
 
 .shizuku_400_02 {
@@ -40,6 +42,8 @@
     height: 397px;
     background-position: 0 -402px;
     animation: ティアドロップス 40s infinite linear;
+    text-align: left;
+    right: 0;
 }
 
 .shizuku_400_01:before,
@@ -83,9 +87,8 @@
     width: 1084px;
     height: 500px;
     background-position: 0 -804px;
-    left: -100%;
-    right: -100%;
-    margin: auto;
+    left: 50%;
+    margin-left: -542px;
 }
 
 .myp_sky_fune {
@@ -155,11 +158,11 @@
     position: absolute;
     background-image: url('/magica/resource/image_native/bg/web/web_00110.png');
     background-position: 0 -1527px;
-    right: -100%;
+    right: -1300px;
 }
 
 .sora:before {
-    right: 100%;
+    right: 1300px;
 }
 
 .web_00111 {
